--- a/style.css
+++ b/style.css
@@ -8,17 +8,20 @@
     
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+
 li {
     list-style-type: none;
 }
 
 a {
     text-decoration: none;
-}
-
-section {
-    background-color: rgb(245, 245, 245);
-    transition: all 300ms ease;
 }
 
 p {
@@ -50,37 +53,16 @@ p {
 
 nav {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    background-color: aquamarine;
     align-items: center;
-    width: 100%;
-    max-width: 1200px;
+    max-width: 1500px;
     margin: 0 auto;
     padding: 0 20px;
     height: 100px;
 }
 
-.nav__link--list{
-    display: flex;
-}
 
-.nav__link {
-    margin: 0 12px;
-}
-
-.nav__link--anchor {
-    font-size: 16px;
-    color: #242424;
-    font-weight: 700;
-}
-
-.fa-adjust {
-    font-size: 20px;
-}
-
-.button {
-    border: none;
-    font-size: 25px;
-}
 
 /*search*/
 
@@ -186,6 +168,7 @@ input:not(:placeholder-shown) ~ .reset {
     justify-content: center;
     align-items: center;
     background-color: lightseagreen;
+    width: 100%;
 }
 
 /*results*/
@@ -198,7 +181,11 @@ input:not(:placeholder-shown) ~ .reset {
 .results {
     display: flex;
     text-align: center;
+    justify-content: center;
     margin: 50px 25px;
+    flex-wrap: wrap;
+    width: 100%;
+    max-width: 1500px;
 }
 
 .movie__imdb {
@@ -209,4 +196,8 @@ input:not(:placeholder-shown) ~ .reset {
     font-weight: 700;
     border-radius: 20px;
     border: none;
+}
+
+.movie__profile {
+    margin: 45px;
 }
